# ExtendDDG

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  ruff.toml  run_all_evals.py
examples/: quick_start.py  quick_start_part_2.py
examples/codebooks/: global_attitudes_codebook.csv  rls_codebook_sample.csv
examples/datasets/: abjk_example_data.csv  global_attitudes_example_data.csv  rls_codebook.csv  rls_example_data.csv
examples/notebooks/: codebook_parser_smoke_tests.ipynb  variable_alignment_opportunity_atlas.ipynb
examples/results/: results.ipynb  run_all_evals.py
examples/run_outputs/: clark_results.json  combined_results.json  rls_results.json
examples/test_outputs/: clark_output.txt  rls_output.txt  rls_output_codebook.txt
src/extendddg/: __init__.py  extendddg.py
src/extendddg/config/: prompts.yaml  topic.json
src/extendddg/description/: __init__.py  dataset_description.py  generator.py  search_description.py
src/extendddg/evaluation/: __init__.py  metrics.py
src/extendddg/parsing/: __init__.py  codebook.py  documentation.py
src/extendddg/profiling/: __init__.py  codebook.py  documentation.py  semantic.py
src/extendddg/utils/: __init__.py  prompts.py  sampling.py
